--- a/applications/homebrew/Brewfile
+++ b/applications/homebrew/Brewfile
@@ -1,6 +1,7 @@
 tap "atlassian/tap"
 tap "azure/functions"
 tap "caskroom/fonts"
+tap "domt4/autoupdate"
 tap "homebrew/bundle"
 tap "homebrew/cask"
 tap "homebrew/cask-drivers"
@@ -19,13 +20,12 @@ brew "python"
 brew "azure-cli"
 brew "certbot"
 brew "coreutils"
-brew "docker", link: false
+brew "docker"
 brew "ffmpeg"
 brew "fselect"
 brew "git-lfs"
 brew "glances"
-brew "go-jira"
-brew "googler"
+brew "gnu-sed"
 brew "grc"
 brew "htop"
 brew "libtool"
@@ -34,60 +34,77 @@ brew "jq"
 brew "libiconv"
 brew "libksba"
 brew "libyaml"
-brew "mailhog", restart_service: true
+brew "mas"
 brew "maven"
-brew "midnight-commander"
-brew "mongodb", restart_service: true
-brew "mysql", restart_service: true
 brew "ncdu"
+brew "nmap"
 brew "node"
 brew "nvm"
 brew "pkg-config"
-brew "postgresql", restart_service: true
 brew "putty"
 brew "pv"
 brew "speedtest-cli"
+brew "ssllabs-scan"
+brew "telnet"
 brew "terraform"
 brew "tmux"
 brew "tree"
+brew "wget"
 brew "zsh"
 brew "zsh-completions"
 brew "azure/functions/azure-functions-core-tools"
 brew "moncho/dry/dry"
 brew "sambadevi/powerlevel9k/powerlevel9k"
-brew "mas"
 cask "1password"
 cask "ableton-live-suite"
 cask "angry-ip-scanner"
 cask "appcleaner"
+cask "balenaetcher"
 cask "carbon-copy-cloner"
 cask "dbeaver-community"
 cask "docker"
-cask "duet"
 cask "google-chrome"
 cask "google-drive-file-stream"
+cask "handbrake"
 cask "iterm2"
 cask "java"
 cask "keycastr"
 cask "microsoft-azure-storage-explorer"
-cask "mongodb-compass"
-cask "mono-mdk"
-cask "mono-mdk516"
+cask "microsoft-teams"
 cask "paw"
 cask "postman"
+cask "powershell"
+cask "rider"
 cask "slack"
 cask "sourcetree"
 cask "spotify"
 cask "steam"
-cask "telegram-desktop"
+cask "telegram"
+cask "thunderbird"
 cask "virtualbox"
 cask "virtualbox-extension-pack"
 cask "visual-studio-code"
 cask "vlc"
+cask "wireshark"
 cask "caskroom/fonts/font-hack-nerd-font"
 cask "puppetlabs/puppet/pdk"
-cask "puppet-bolt"
-cask "the-unarchiver"
-cask "transmission"
-cask "obs"
-cask "mysql-connector-python"
+cask "puppetlabs/puppet/puppet-bolt"
+mas "Adblock Plus", id: 1432731683
+mas "djay Pro", id: 1302002064
+mas "feedly", id: 865500966
+mas "GarageBand", id: 682658836
+mas "iMovie", id: 408981434
+mas "Keynote", id: 409183694
+mas "Magnet", id: 441258766
+mas "Microsoft Excel", id: 462058435
+mas "Microsoft Outlook", id: 985367838
+mas "Microsoft PowerPoint", id: 462062816
+mas "Microsoft Remote Desktop", id: 1295203466
+mas "Microsoft Word", id: 462054704
+mas "Numbers", id: 409203825
+mas "Pages", id: 409201541
+mas "Pocket", id: 568494494
+mas "Unsplash Wallpapers", id: 1284863847
+mas "WhatsApp", id: 1147396723
+mas "WiFi Explorer Lite", id: 1408727408
+mas "Xcode", id: 497799835
