Updated packages and added cat alias

--- a/applications/homebrew/Brewfile
+++ b/applications/homebrew/Brewfile
@@ -2,6 +2,7 @@ tap "atlassian/tap"
 tap "azure/functions"
 tap "caskroom/fonts"
 tap "domt4/autoupdate"
+tap "franklouwers/eid-be"
 tap "homebrew/bundle"
 tap "homebrew/cask"
 tap "homebrew/cask-drivers"
@@ -9,18 +10,19 @@ tap "homebrew/cask-versions"
 tap "homebrew/core"
 tap "homebrew/services"
 tap "moncho/dry"
+tap "mongodb/brew"
 tap "puppetlabs/puppet"
 tap "sambadevi/powerlevel9k"
 brew "archey"
 brew "readline"
 brew "autoconf"
 brew "automake"
-brew "openssl"
-brew "python"
 brew "azure-cli"
+brew "bat"
+brew "python"
 brew "certbot"
 brew "coreutils"
-brew "docker"
+brew "docker", link: false
 brew "ffmpeg"
 brew "fselect"
 brew "git-lfs"
@@ -41,12 +43,15 @@ brew "nmap"
 brew "node"
 brew "nvm"
 brew "pkg-config"
+brew "postgresql"
+brew "postgresql@11"
 brew "putty"
 brew "pv"
 brew "speedtest-cli"
 brew "ssllabs-scan"
 brew "telnet"
 brew "terraform"
+brew "terraform@0.11"
 brew "tmux"
 brew "tree"
 brew "wget"
@@ -54,15 +59,17 @@ brew "zsh"
 brew "zsh-completions"
 brew "azure/functions/azure-functions-core-tools"
 brew "moncho/dry/dry"
+brew "mongodb/brew/mongodb-community"
+brew "puppetlabs/puppet/wash"
 brew "sambadevi/powerlevel9k/powerlevel9k"
-cask "1password"
 cask "ableton-live-suite"
 cask "angry-ip-scanner"
 cask "appcleaner"
 cask "balenaetcher"
 cask "carbon-copy-cloner"
-cask "dbeaver-community"
 cask "docker"
+cask "eid-be"
+cask "font-hack-nerd-font"
 cask "google-chrome"
 cask "google-drive-file-stream"
 cask "handbrake"
@@ -71,25 +78,29 @@ cask "java"
 cask "keycastr"
 cask "microsoft-azure-storage-explorer"
 cask "microsoft-teams"
+cask "mongodb-compass-community"
+cask "osxfuse"
+cask "parallels"
 cask "paw"
+cask "pdk"
 cask "postman"
 cask "powershell"
-cask "rider"
+cask "puppet-bolt"
 cask "slack"
 cask "sourcetree"
 cask "spotify"
 cask "steam"
-cask "telegram"
+cask "steamcmd"
 cask "thunderbird"
+cask "vagrant"
 cask "virtualbox"
 cask "virtualbox-extension-pack"
 cask "visual-studio-code"
 cask "vlc"
 cask "wireshark"
-cask "caskroom/fonts/font-hack-nerd-font"
-cask "puppetlabs/puppet/pdk"
-cask "puppetlabs/puppet/puppet-bolt"
+mas "1Password 7", id: 1333542190
 mas "Adblock Plus", id: 1432731683
+mas "Brother iPrint&Scan", id: 1193539993
 mas "djay Pro", id: 1302002064
 mas "feedly", id: 865500966
 mas "GarageBand", id: 682658836
@@ -104,6 +115,7 @@ mas "Microsoft Word", id: 462054704
 mas "Numbers", id: 409203825
 mas "Pages", id: 409201541
 mas "Pocket", id: 568494494
+mas "Telegram", id: 747648890
 mas "Unsplash Wallpapers", id: 1284863847
 mas "WhatsApp", id: 1147396723
 mas "WiFi Explorer Lite", id: 1408727408
