--- a/applications/homebrew/Brewfile
+++ b/applications/homebrew/Brewfile
@@ -62,6 +62,7 @@ brew "moncho/dry/dry"
 brew "mongodb/brew/mongodb-community"
 brew "puppetlabs/puppet/wash"
 brew "sambadevi/powerlevel9k/powerlevel9k"
+brew "awscli"
 cask "ableton-live-suite"
 cask "angry-ip-scanner"
 cask "appcleaner"
