--- a/applications/vscode/settings.json
+++ b/applications/vscode/settings.json
@@ -1,6 +1,5 @@
 {
     "git.autofetch": true,
-    "python.pythonPath": "/usr/local/bin/python3",
     "files.autoSave": "afterDelay",
     "workbench.sideBar.location": "left",
     "workbench.statusBar.feedback.visible": false,
@@ -10,7 +9,6 @@
     "terminal.integrated.confirmOnExit": true,
     "azureFunctions.showExplorer": false,
     "docker.showExplorer": false,
-    "search.location": "panel",
     "python.jediEnabled": false,
     "editor.suggestSelection": "first",
     "vsintellicode.modify.editor.suggestSelection": "automaticallyOverrodeDefaultValue",
@@ -29,7 +27,8 @@
     "vs-kubernetes": {
         "vs-kubernetes.helm-path": "/Users/jsoetewey/.vs-kubernetes/tools/helm/darwin-amd64/helm",
         "vs-kubernetes.draft-path": "/Users/jsoetewey/.vs-kubernetes/tools/draft/darwin-amd64/draft",
-        "vs-kubernetes.minikube-path": "/Users/jsoetewey/.vs-kubernetes/tools/minikube/darwin-amd64/minikube"
+        "vs-kubernetes.minikube-path": "/Users/jsoetewey/.vs-kubernetes/tools/minikube/darwin-amd64/minikube",
+        "vs-kubernetes.minikube-path.mac": "/Users/jsoetewey/.vs-kubernetes/tools/minikube/darwin-amd64/minikube"
     },
     "terminal.integrated.fontFamily": "RobotoMono Nerd Font",
     "terminal.integrated.fontSize": 14,
@@ -101,7 +100,7 @@
     "spotify.showMuteUnmuteVolumeButton": false,
     "todo-tree.highlights.enabled": true,
     "yaml.schemas": {
-        "file:///Users/jsoetewey/.vscode/extensions/atlassian.atlascode-2.3.2/resources/schemas/pipelines-schema.json": "bitbucket-pipelines.yml"
+        "file:///Users/jsoetewey/.vscode/extensions/atlassian.atlascode-2.8.3/resources/schemas/pipelines-schema.json": "bitbucket-pipelines.yml"
     },
     "atlascode.jira.jqlList": [
         {
@@ -119,4 +118,12 @@
     "atlascode.bitbucket.statusbar.showProduct": false,
     "atlascode.bitbucket.statusbar.enabled": false,
     "atlascode.jira.statusbar.enabled": false,
+    "todo-tree.tree.showScanModeButton": false,
+    "editor.fontFamily": "'JetBrains Mono', Menlo, Monaco, 'Courier New', monospace",
+    "editor.fontSize": 13,
+    "workbench.colorCustomizations": {
+    
+    },
+    "python.defaultInterpreterPath": "/usr/local/bin/python3",
+    "python.languageServer": "Microsoft",
 }
