--- a/applications/homebrew/Brewfile
+++ b/applications/homebrew/Brewfile
@@ -1,8 +1,8 @@
 tap "atlassian/tap"
 tap "azure/functions"
-tap "caskroom/fonts"
 tap "domt4/autoupdate"
 tap "franklouwers/eid-be"
+tap "hashicorp/tap"
 tap "homebrew/bundle"
 tap "homebrew/cask"
 tap "homebrew/cask-drivers"
@@ -13,56 +13,55 @@ tap "moncho/dry"
 tap "mongodb/brew"
 tap "puppetlabs/puppet"
 tap "sambadevi/powerlevel9k"
-brew "archey"
 brew "readline"
 brew "autoconf"
 brew "automake"
+brew "awscli"
+brew "azcopy"
 brew "azure-cli"
 brew "bat"
-brew "python"
 brew "certbot"
 brew "coreutils"
-brew "docker", link: false
+brew "docker"
+brew "libtool"
+brew "pkg-config"
+brew "libksba"
+brew "libyaml"
+brew "duplicity"
 brew "ffmpeg"
 brew "fselect"
 brew "git-lfs"
 brew "glances"
 brew "gnu-sed"
 brew "grc"
+brew "hadolint"
 brew "htop"
-brew "libtool"
 brew "imagemagick@6"
 brew "jq"
 brew "libiconv"
-brew "libksba"
-brew "libyaml"
+brew "mailhog"
 brew "mas"
-brew "maven"
 brew "ncdu"
 brew "nmap"
 brew "node"
 brew "nvm"
-brew "pkg-config"
 brew "postgresql"
-brew "postgresql@11"
 brew "putty"
 brew "pv"
 brew "speedtest-cli"
 brew "ssllabs-scan"
 brew "telnet"
-brew "terraform"
-brew "terraform@0.11"
 brew "tmux"
 brew "tree"
 brew "wget"
 brew "zsh"
 brew "zsh-completions"
 brew "azure/functions/azure-functions-core-tools"
+brew "hashicorp/tap/terraform"
+brew "hashicorp/tap/vault"
 brew "moncho/dry/dry"
-brew "mongodb/brew/mongodb-community"
 brew "puppetlabs/puppet/wash"
 brew "sambadevi/powerlevel9k/powerlevel9k"
-brew "awscli"
 cask "ableton-live-suite"
 cask "angry-ip-scanner"
 cask "appcleaner"
@@ -74,8 +73,8 @@ cask "font-hack-nerd-font"
 cask "google-chrome"
 cask "google-drive-file-stream"
 cask "handbrake"
+cask "insomnia"
 cask "iterm2"
-cask "java"
 cask "keycastr"
 cask "microsoft-azure-storage-explorer"
 cask "microsoft-teams"
@@ -92,6 +91,7 @@ cask "sourcetree"
 cask "spotify"
 cask "steam"
 cask "steamcmd"
+cask "teamviewer"
 cask "thunderbird"
 cask "vagrant"
 cask "virtualbox"
@@ -102,12 +102,15 @@ cask "wireshark"
 mas "1Password 7", id: 1333542190
 mas "Adblock Plus", id: 1432731683
 mas "Brother iPrint&Scan", id: 1193539993
+mas "Developer", id: 640199958
 mas "djay Pro", id: 1302002064
+mas "F5Access", id: 1243219105
 mas "feedly", id: 865500966
 mas "GarageBand", id: 682658836
 mas "iMovie", id: 408981434
 mas "Keynote", id: 409183694
 mas "Magnet", id: 441258766
+mas "Messenger", id: 1480068668
 mas "Microsoft Excel", id: 462058435
 mas "Microsoft Outlook", id: 985367838
 mas "Microsoft PowerPoint", id: 462062816
@@ -116,8 +119,10 @@ mas "Microsoft Word", id: 462054704
 mas "Numbers", id: 409203825
 mas "Pages", id: 409201541
 mas "Pocket", id: 568494494
+mas "Remote Desktop", id: 409907375
 mas "Telegram", id: 747648890
 mas "Unsplash Wallpapers", id: 1284863847
+mas "WebSocket Client", id: 1399498094
 mas "WhatsApp", id: 1147396723
 mas "WiFi Explorer Lite", id: 1408727408
 mas "Xcode", id: 497799835
