--- a/applications/homebrew/Brewfile
+++ b/applications/homebrew/Brewfile
@@ -1,45 +1,32 @@
-tap "atlassian/tap"
-tap "azure/functions"
-tap "domt4/autoupdate"
-tap "franklouwers/eid-be"
-tap "hashicorp/tap"
+# Homebrew taps
 tap "homebrew/bundle"
 tap "homebrew/cask"
 tap "homebrew/cask-drivers"
 tap "homebrew/cask-versions"
 tap "homebrew/core"
 tap "homebrew/services"
-tap "moncho/dry"
+
+# Third party taps
+tap "atlassian/tap"
+tap "azure/functions"
+tap "domt4/autoupdate"
+tap "franklouwers/eid-be"
+tap "hashicorp/tap"
 tap "mongodb/brew"
 tap "puppetlabs/puppet"
-tap "sambadevi/powerlevel9k"
-brew "readline"
-brew "autoconf"
-brew "automake"
-brew "awscli"
+tap "romkatv/powerlevel10k"
+
+# Brew dependencies
 brew "azcopy"
 brew "azure-cli"
 brew "bat"
-brew "certbot"
-brew "coreutils"
 brew "docker"
-brew "libtool"
-brew "pkg-config"
-brew "libksba"
-brew "libyaml"
-brew "duplicity"
 brew "ffmpeg"
 brew "fselect"
 brew "git-lfs"
-brew "glances"
-brew "gnu-sed"
 brew "grc"
 brew "hadolint"
 brew "htop"
-brew "imagemagick@6"
-brew "jq"
-brew "libiconv"
-brew "mailhog"
 brew "mas"
 brew "ncdu"
 brew "nmap"
@@ -56,12 +43,15 @@ brew "tree"
 brew "wget"
 brew "zsh"
 brew "zsh-completions"
+brew "cmatrix"
+brew "googler"
+brew "youtube-dl"
 brew "azure/functions/azure-functions-core-tools"
 brew "hashicorp/tap/terraform"
 brew "hashicorp/tap/vault"
-brew "moncho/dry/dry"
-brew "puppetlabs/puppet/wash"
 brew "romkatv/powerlevel10k/powerlevel10k"
+
+# Applications (through cask)
 cask "ableton-live-suite"
 cask "angry-ip-scanner"
 cask "appcleaner"
@@ -84,8 +74,7 @@ cask "parallels"
 cask "paw"
 cask "pdk"
 cask "postman"
-cask "powershell"
-cask "puppet-bolt"
+cask "puppetlabs/puppet/puppet-bolt"
 cask "slack"
 cask "sourcetree"
 cask "spotify"
@@ -99,11 +88,15 @@ cask "virtualbox-extension-pack"
 cask "visual-studio-code"
 cask "vlc"
 cask "wireshark"
+cask "adoptopenjdk"
+cask "notion"
+cask "obs"
+
+# Applications (mac app store)
 mas "1Password 7", id: 1333542190
 mas "Adblock Plus", id: 1432731683
 mas "Brother iPrint&Scan", id: 1193539993
 mas "Developer", id: 640199958
-mas "djay Pro", id: 1302002064
 mas "F5Access", id: 1243219105
 mas "feedly", id: 865500966
 mas "GarageBand", id: 682658836
@@ -112,13 +105,11 @@ mas "Keynote", id: 409183694
 mas "Magnet", id: 441258766
 mas "Messenger", id: 1480068668
 mas "Microsoft Excel", id: 462058435
-mas "Microsoft Outlook", id: 985367838
 mas "Microsoft PowerPoint", id: 462062816
 mas "Microsoft Remote Desktop", id: 1295203466
 mas "Microsoft Word", id: 462054704
 mas "Numbers", id: 409203825
 mas "Pages", id: 409201541
-mas "Pocket", id: 568494494
 mas "Remote Desktop", id: 409907375
 mas "Telegram", id: 747648890
 mas "Unsplash Wallpapers", id: 1284863847
