--- a/applications/vscode/settings.json
+++ b/applications/vscode/settings.json
@@ -133,11 +133,8 @@
             "password": "{{put-password-here}}"
         }
     ],
-    "workbench.editorAssociations": [
-        {
-            "viewType": "jupyter.notebook.ipynb",
-            "filenamePattern": "*.ipynb"
-        }
-    ],
+    "workbench.editorAssociations": {
+        "*.ipynb": "jupyter.notebook.ipynb"
+    },
     "editor.formatOnSave": true,
 }
