--- a/applications/homebrew/Brewfile
+++ b/applications/homebrew/Brewfile
@@ -1,127 +1,191 @@
-# Homebrew taps
-tap "homebrew/bundle"
-tap "homebrew/cask"
-tap "homebrew/cask-drivers"
-tap "homebrew/cask-versions"
-tap "homebrew/core"
-tap "homebrew/services"
-
-# Third party taps
 tap "atlassian/tap"
 tap "azure/functions"
+tap "azure/kubelogin"
+tap "cloudquery/tap"
+tap "danielfoehrkn/switch"
+tap "derailed/k9s"
 tap "domt4/autoupdate"
-tap "franklouwers/eid-be"
+tap "elastic/tap"
 tap "hashicorp/tap"
+tap "int128/kubelogin"
+tap "jesseduffield/lazydocker"
+tap "microsoft/mssql-release"
 tap "mongodb/brew"
 tap "puppetlabs/puppet"
 tap "romkatv/powerlevel10k"
-
-# Brew dependencies
+brew "ansible-lint"
+brew "glib"
+brew "awscli"
 brew "azcopy"
+brew "aztfexport"
 brew "azure-cli"
+brew "base64"
 brew "bat"
+brew "bpytop"
+brew "certbot"
+brew "cmatrix"
+brew "code-cli"
+brew "colordiff"
+brew "d2"
 brew "docker"
+brew "dtach"
+brew "fd"
+brew "p11-kit"
+brew "unbound"
+brew "gnutls"
+brew "harfbuzz"
 brew "ffmpeg"
 brew "fselect"
+brew "fzf"
+brew "git-delta"
 brew "git-lfs"
+brew "git-quick-stats"
+brew "go"
+brew "goaccess"
+brew "gobject-introspection"
+brew "graphviz"
 brew "grc"
 brew "hadolint"
+brew "helm"
 brew "htop"
+brew "node"
+brew "http-server"
+brew "httpie"
+brew "ipcalc"
+brew "jmeter"
+brew "jq"
+brew "krb5"
+brew "kubernetes-cli"
+brew "kubeseal"
 brew "mas"
+brew "maven"
 brew "ncdu"
 brew "nmap"
-brew "node"
 brew "nvm"
-brew "postgresql"
+brew "pipx"
+brew "postgresql@14"
+brew "powerlevel10k"
+brew "prettier"
 brew "putty"
 brew "pv"
+brew "pyenv"
+brew "python@3.10"
+brew "python@3.11"
+brew "python@3.9"
+brew "qrencode"
+brew "ripgrep"
 brew "speedtest-cli"
 brew "ssllabs-scan"
+brew "tcl-tk"
 brew "telnet"
+brew "terraform-docs"
+brew "tfenv"
+brew "utf8proc"
 brew "tmux"
 brew "tree"
+brew "trivy"
 brew "wget"
+brew "wimlib"
+brew "zoxide"
 brew "zsh"
 brew "zsh-completions"
-brew "cmatrix"
-brew "googler"
-brew "youtube-dl"
 brew "azure/functions/azure-functions-core-tools"
-brew "hashicorp/tap/terraform"
-brew "hashicorp/tap/vault"
-brew "romkatv/powerlevel10k/powerlevel10k"
-brew "openssl@1.1"
-brew "python@3.8"
-
-# Applications (through cask)
-cask "ableton-live-suite"
-cask "angry-ip-scanner"
+brew "azure/kubelogin/az-kubelogin"
+brew "cloudquery/tap/cloudquery"
+brew "danielfoehrkn/switch/switch"
+brew "derailed/k9s/k9s"
+brew "hashicorp/tap/packer"
+brew "int128/kubelogin/kubelogin"
+brew "jesseduffield/lazydocker/lazydocker"
 cask "appcleaner"
-cask "balenaetcher"
+cask "aws-vault-binary"
+cask "azure-data-studio"
+cask "bruno"
 cask "carbon-copy-cloner"
-cask "docker"
-cask "eid-be"
+cask "charmstone"
+cask "dbeaver-community"
+cask "displaylink"
+cask "drawio"
 cask "font-hack-nerd-font"
-cask "google-chrome"
-cask "google-drive-file-stream"
-cask "handbrake"
-cask "insomnia"
-cask "iterm2"
+cask "headlamp"
+cask "hiddenbar"
+cask "imageoptim"
 cask "keycastr"
+cask "macpass"
+cask "microsoft-auto-update"
 cask "microsoft-azure-storage-explorer"
 cask "microsoft-teams"
-cask "osxfuse"
+cask "mimestream"
+cask "notion"
+cask "notion-calendar"
 cask "parallels"
-cask "paw"
 cask "pdk"
 cask "postman"
-cask "puppetlabs/puppet/puppet-bolt"
-cask "slack"
-cask "sourcetree"
-cask "spotify"
-cask "teamviewer"
-cask "thunderbird"
-cask "vagrant"
-cask "virtualbox"
-cask "virtualbox-extension-pack"
+cask "powershell"
+cask "puppet-bolt"
+cask "rancher"
+cask "raycast"
+cask "shottr"
+cask "soapui"
 cask "visual-studio-code"
 cask "vlc"
-cask "wireshark"
-cask "adoptopenjdk"
-cask "notion"
-cask "obs"
-cask "transmission"
-cask "dbeaver-community"
-cask "redisinsight"
-cask "tunnelblick"
-cask "zoom"
-
-# Applications (mac app store)
-mas "1Password 7", id: 1333542190
+mas "1Password for Safari", id: 1569813296
 mas "Adblock Plus", id: 1432731683
 mas "Developer", id: 640199958
-mas "djay", id: 450527929
-mas "F5Access", id: 1243219105
-mas "feedly", id: 865500966
-mas "Keynote", id: 409183694
-mas "Magnet", id: 441258766
 mas "Microsoft Excel", id: 462058435
-mas "Microsoft Remote Desktop", id: 1295203466
-mas "Microsoft Word", id: 462054704
-mas "Numbers", id: 409203825
-mas "Pages", id: 409201541
-mas "Telegram", id: 747648890
+mas "Notion Web Clipper", id: 1559269364
+mas "QR Capture", id: 1369524274
+mas "Save to Pinterest", id: 6473649042
 mas "The Unarchiver", id: 425424353
-mas "Unsplash Wallpapers", id: 1284863847
-mas "WebSocket Client", id: 1399498094
-mas "WhatsApp", id: 1147396723
-mas "WiFi Explorer Lite", id: 1408727408
-
-# Personal computer
-# cask "backblaze"
-# cask "musicbrainz-picard"
-# cask "splice"
-# cask "goodsync"
-# cask "discord"
-# mas "DaVinci Resolve", id: 571213070
-# mas "Mimeo Photos", id: 1282504627
+mas "WhatsApp", id: 310633997
+mas "Yubico Authenticator", id: 1497506650
+vscode "aquasecurityofficial.trivy-vulnerability-scanner"
+vscode "bencoleman.armview"
+vscode "docker.docker"
+vscode "eamodio.gitlens"
+vscode "editorconfig.editorconfig"
+vscode "gruntfuggly.todo-tree"
+vscode "hashicorp.hcl"
+vscode "hashicorp.terraform"
+vscode "ipedrazas.kubernetes-snippets"
+vscode "mechatroner.rainbow-csv"
+vscode "mindaro-dev.file-downloader"
+vscode "ms-azure-devops.azure-pipelines"
+vscode "ms-azuretools.vscode-azureresourcegroups"
+vscode "ms-azuretools.vscode-azureterraform"
+vscode "ms-azuretools.vscode-bicep"
+vscode "ms-azuretools.vscode-containers"
+vscode "ms-azuretools.vscode-docker"
+vscode "ms-dotnettools.csdevkit"
+vscode "ms-dotnettools.csharp"
+vscode "ms-dotnettools.vscode-dotnet-runtime"
+vscode "ms-dotnettools.vscodeintellicode-csharp"
+vscode "ms-kubernetes-tools.vscode-aks-tools"
+vscode "ms-kubernetes-tools.vscode-kubernetes-tools"
+vscode "ms-python.debugpy"
+vscode "ms-python.isort"
+vscode "ms-python.python"
+vscode "ms-python.vscode-pylance"
+vscode "ms-vscode-remote.remote-containers"
+vscode "ms-vscode-remote.remote-ssh"
+vscode "ms-vscode-remote.remote-ssh-edit"
+vscode "ms-vscode-remote.vscode-remote-extensionpack"
+vscode "ms-vscode.makefile-tools"
+vscode "ms-vscode.powershell"
+vscode "ms-vscode.remote-explorer"
+vscode "ms-vscode.remote-server"
+vscode "ms-vsliveshare.vsliveshare"
+vscode "msazurermtools.azurerm-vscode-tools"
+vscode "naumovs.color-highlight"
+vscode "patcx.vscode-nuget-gallery"
+vscode "puppet.puppet-vscode"
+vscode "redhat.ansible"
+vscode "redhat.vscode-xml"
+vscode "redhat.vscode-yaml"
+vscode "ritwickdey.liveserver"
+vscode "run-at-scale.terraform-doc-snippets"
+vscode "sonarsource.sonarlint-vscode"
+vscode "teamsdevapp.vscode-adaptive-cards"
+vscode "terrastruct.d2"
+vscode "vscode-icons-team.vscode-icons"
+vscode "weaveworks.vscode-gitops-tools"
